2010-10-01 A. Degremont <aurelien.degremont@cea.fr>

	* Task.py: Add Task.run() new method (trac ticket #119).

2010-09-28 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Do not allow option value starting with '-' in some
	cases.

2010-09-26 S. Thiell <stephane.thiell@cea.fr>

	* CLI: Package created.

2010-09-03 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Ssh.py: Fix issue with clush -l USER by separating underlying ssh
	"-l USER" in two shell arguments (trac ticket #113).

2010-08-31 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Live per-line gathering (-bL mode) improvements.

	* Task.py: Fixed Task.timer() when called from another thread - it used to
	return None (trac ticket #112).

2010-08-29 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Add docstring for timer's autoclose feature (trac ticket #109).

	* Worker/Worker.py: Attribute 'last_errmsg' not properly initialized (trac
	ticket #107).

	* setup.py: Switch to setuptools.

    * clustershell.spec.in: Fix issue on el5 with if condition when defining
	python_sitelib.

2010-08-26 S. Thiell <stephane.thiell@cea.fr>

	* Packaging automation engineering and improved specfile.

	* License files converted to UTF-8.

2010-07-27 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 released.

2010-07-21 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 2 released.

	* NodeSet.py: Like in some previous version, support None as argument for
	most methods (trac ticket #106).

2010-07-16 S. Thiell <stephane.thiell@cea.fr>

	* scripts/clush.py: Fix uncaught exceptions introduced in 1.3 RC 1 (trac
	ticket #105).

2010-07-12 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.3 RC 1 released.

	* Task.py: Raise proper KeyError exception in Task.key_retcode(key) when
	key is not found in any finished workers (trac ticket #102).

2010-07-06 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Added documentation for reserved set_default() and set_info()
	keys (trac ticket #101).
