@@ -1,3 +1,9 @@
+2010-10-10 S. Thiell <stephane.thiell@cea.fr>
+
+	* Worker/Worker.py: WorkerBadArgumentError exception is now
+	deprecated, use ValueError instead. Also added exception message in
+	each worker (trac ticket #116).
+
 2010-10-01 A. Degremont <aurelien.degremont@cea.fr>
 
 	* Task.py: Add Task.run() new method (trac ticket #119).
